--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,12 +1,8 @@
-parameters:
-    secret: pjvpZ/xL32KEEOp3bNanjpcfTetW0w2H04b78A6CXKI=
-
 services:
     _defaults:
         autowire: true
         autoconfigure: true
         public: false
 
-    App\Controller\TestController:
-        tags:
-            - { name: controller.service_arguments }
+    CORS\Bundle\VarnishBundle\Controller\AdminController:
+        public: true
