fix: handle array with ElementHelper

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -20,6 +20,7 @@ services:
     arguments:
       - '@fos_http_cache.http.symfony_response_tagger'
       - '@fos_http_cache.cache_manager'
+      - '@Psr\Log\LoggerInterface'
 
   CORS\Bundle\VarnishBundle\Messenger\InvalidateMessageHandler:
     arguments:
