--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": ">=8.0",
-        "pimcore/pimcore": "^11.0",
+        "pimcore/pimcore": "^11.0 || ^12.0",
         "friendsofsymfony/http-cache-bundle": "^2.12 || ^3.1",
         "nyholm/psr7": "^1.5",
         "guzzlehttp/promises": "^2.0"
